Material can't read integer properties #102076

Closed
opened 2022-10-26 11:09:01 +02:00 by Leroy · 13 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-24 19:44, hash: 5d5e0f1b0e
Worked: (newest version of Blender that worked as expected)

Short description of error
Material can’t read integer properties, floats work fine

Exact steps for others to reproduce the error
attribute.blend
20221026_17.03_750.mp4

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-24 19:44, hash: `5d5e0f1b0e` Worked: (newest version of Blender that worked as expected) **Short description of error** Material can’t read integer properties, floats work fine **Exact steps for others to reproduce the error** [attribute.blend](https://archive.blender.org/developer/F13771711/attribute.blend) [20221026_17.03_750.mp4](https://archive.blender.org/developer/F13771709/20221026_17.03_750.mp4)
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

#102757 was marked as duplicate of this issue

#102757 was marked as duplicate of this issue

#102181 was marked as duplicate of this issue

#102181 was marked as duplicate of this issue

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Don't know if this is related, but: Incorrect integer attribute interpolation when rasterized?
Although most likely this is still a problem of passing the attribute to rendering
2022-10-26 12-25-34.mp4

Don't know if this is related, but: Incorrect integer attribute interpolation when rasterized? Although most likely this is still a problem of passing the attribute to rendering [2022-10-26 12-25-34.mp4](https://archive.blender.org/developer/F13771785/2022-10-26_12-25-34.mp4)
Member

Added subscriber: @pseudoua

Added subscriber: @pseudoua
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscribers: @HooglyBoogly, @Jeroen-Bakker

Added subscribers: @HooglyBoogly, @Jeroen-Bakker
Member

I can imagine that this hasn't been implemented yet. @HooglyBoogly Is this still a todo?

I can imagine that this hasn't been implemented yet. @HooglyBoogly Is this still a todo?
Jeroen Bakker self-assigned this 2022-11-11 08:14:17 +01:00
Jeroen Bakker removed their assignment 2022-11-16 15:22:04 +01:00
Clément Foucault was assigned by Jeroen Bakker 2022-11-16 15:22:04 +01:00
Clément Foucault was unassigned by Miguel Pozo 2022-11-18 15:36:16 +01:00
Miguel Pozo self-assigned this 2022-11-18 15:36:16 +01:00
Member

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by 2a53e0f437

This issue was referenced by 2a53e0f4376d8c3f91fb404893b2d4040efe3046
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102076
No description provided.